--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
+            <a class="nav-link" href="cities.html">Cities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
