adding about and cities structure

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="nav-link" href="cities.html">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="test.html">Test</a>
           </li>
         </ul>
         <span class="navbar-text">
@@ -57,7 +57,81 @@
         <div class="row"></div>
       </div>
     </div>
-     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
+
+    <h1>About</h1>
+    <div class="about-container">
+      <div class="col">
+        <div class="row">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error
+            ipsa neque nulla quas possimus earum officiis ratione, consectetur
+            aperiam porro? Ratione deserunt dolor ex tempora perspiciatis autem
+            sed dicta.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="offer-heading">What we offer</h2>
+    <div class="container offer-container">
+      <div class="row">
+        <div class="col-sm">
+          stuff and stuff and beers
+        </div>
+        <div class="col-sm">
+          <div class="row">
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">
+                    With supporting text below as a natural lead-in to
+                    additional content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-6">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text">
+                    With supporting text below as a natural lead-in to
+                    additional content.
+                  </p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 clas="cities-headin jumbotron">Cities</h2>
+
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis quas
+            aperiam dolorem quod? Aliquid odio quis, consequuntur suscipit
+            quibusdam minus doloribus ducimus ullam ad laborum distinctio quia
+            provident tempora obcaecati.
+          </p>
+        </div>
+        <div class="col">
+          <ul>
+            <li><a href=""></a>London</li>
+            <li><a href=""></a>Manchester</li>
+            <li><a href=""></a>Leeds</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
       async
