moving files across to other workspace

--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
           </p>
         </div>
         <div class="col">
-          <ul>
-            <li><a href=""></a>London</li>
-            <li><a href=""></a>Manchester</li>
-            <li><a href=""></a>Leeds</li>
+          <ul class="city-list">
+            
+            <li><a href="">London</a></li>
+            <li><a href="manchester.html">Manchester</a></li>
+            <li><a href="">Leeds</a></li>
           </ul>
         </div>
       </div>
