email function first draft is working

--- a/test.html
+++ b/test.html
@@ -11,6 +11,7 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/test.js"></script>
 
@@ -49,59 +50,26 @@
         </span>
       </div>
     </nav>
-    <h1 id="tours">Tours</h1>
+    <h1 id="tours">Test</h1>
     <div class="container">
       <div class="col">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          cumque odit, libero ratione, veniam in similique, reiciendis accusamus
-          non minima nostrum rerum eveniet dolorem atque soluta ex porro
-          eligendi aperiam.
-        </p>
+       
       </div>
     </div>
-    <h2>Manchester</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-      recusandae dicta temporibus tempora libero. Rem iure laborum ratione
-      pariatur dolores dicta nesciunt enim! Harum sit voluptatum officiis autem
-      magnam eum? Voluptatibus earum debitis obcaecati expedita accusantium,
-      fuga perferendis temporibus possimus amet illo. Officiis sequi doloribus
-      ab repellat necessitatibus harum ipsa id dolorem repudiandae. Ad
-      dignissimos perferendis nam, iste laboriosam consectetur. Exercitationem
-      illum perspiciatis alias quia aliquid optio molestias sapiente recusandae
-      laboriosam beatae veritatis mollitia, asperiores numquam ex quos ipsum
-      similique consequuntur nesciunt minus magni nisi enim omnis. Sequi, hic
-      placeat. Sunt maiores quibusdam nesciunt similique, recusandae commodi
-      quod, laborum ipsum, error ab distinctio possimus? Deleniti pariatur
-      officia eligendi quia. Tempora voluptas ab quos nemo, temporibus alias
-      perspiciatis sed sint deleniti. Ab ut earum at molestias ea, rem aut
-      obcaecati, sapiente vitae facere repudiandae perferendis distinctio
-      architecto dolorum quo? Voluptates incidunt excepturi accusamus. Velit in
-      enim iusto est cumque, provident sit.
-    </p>
 
-    <div id="map-box">
-      <div id="mapTest"></div>
+    
+     <div id="floating-panel">
+    <b>Start: </b>
+    <select id="start">
+    <option value="7-8, Piccadilly Trading Estate, Manchester M1 2NP">Cloudwater</option>
+ </select>
+    <b>End: </b>
+    <select id="end">
+    <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ">Shindigger</option>
+    </select>
     </div>
 
-    <h2>Manchester</h2>
-     <div id="right-panel">
-      <div id="inputs">
-        <pre>
-var origin1 = {lat: 55.930, lng: -3.118};
-
-var destinationA = 'Stockholm, Sweden';
-
-        </pre>
-      </div>
-      <div>
-        <strong>Results</strong>
-      </div>
-      <div id="output"></div>
-    </div>
-
-  
+   <div id="mapTest"></div>
 
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
