--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -13,6 +13,17 @@
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/script.js"></script>
+
+    <script
+      type="text/javascript"
+      src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"
+    ></script>
+  <script type="text/javascript">
+   (function(){
+      emailjs.init("user_8FmYcOiKwGhh65a0xmExM");
+     
+        })();
+</script>
 
     <title>Bar Hop UK</title>
   </head>
@@ -123,7 +134,6 @@
         </div>
         <div class="col">
           <ul class="city-list">
-            
             <li><a href="">London</a></li>
             <li><a href="manchester.html">Manchester</a></li>
             <li><a href="">Leeds</a></li>
@@ -131,7 +141,53 @@
         </div>
       </div>
     </div>
-
+  <section class="container-fluid">
+      <div class="row-bg-color-contact">
+        <div class="col">
+          <h3 class="contact-heading uppercase text-center">
+            Sign up for our monthly newsletter!
+          </h3>
+          <h5 class="uppercase text-center">Lets drink together!</h5>
+          <div class="center-form">
+            <form onsubmit="return sendMail(this);">
+              <input
+                type="text"
+                name="name"
+                id="fullname"
+                class="form-control"
+                placeholder="Name"
+                required
+              />
+              <input
+                type="email"
+                name="email"
+                id="emailaddress"
+                class="form-control"
+                placeholder="Email"
+                required
+              />
+              <textarea
+                type="newsletter"
+                name="newsletter"
+                id="newsletter"
+                class="form-control"
+                placeholder="BEER"
+                required
+              ></textarea>
+              <div class="form-row text-center">
+                <div class="col">
+                  <button type="submit" class="btn btn-secondary">
+                    Send Project Request
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </section>
+   
+    <script src="assets/js/email.js"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
