--- a/manchester.html
+++ b/manchester.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/manchester.js"></script>
 
     <title>Document</title>
   </head>
@@ -85,28 +85,7 @@
       <div id="mapManchester"></div>
     </div>
 
-    <h2>Manchester</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-      recusandae dicta temporibus tempora libero. Rem iure laborum ratione
-      pariatur dolores dicta nesciunt enim! Harum sit voluptatum officiis autem
-      magnam eum? Voluptatibus earum debitis obcaecati expedita accusantium,
-      fuga perferendis temporibus possimus amet illo. Officiis sequi doloribus
-      ab repellat necessitatibus harum ipsa id dolorem repudiandae. Ad
-      dignissimos perferendis nam, iste laboriosam consectetur. Exercitationem
-      illum perspiciatis alias quia aliquid optio molestias sapiente recusandae
-      laboriosam beatae veritatis mollitia, asperiores numquam ex quos ipsum
-      similique consequuntur nesciunt minus magni nisi enim omnis. Sequi, hic
-      placeat. Sunt maiores quibusdam nesciunt similique, recusandae commodi
-      quod, laborum ipsum, error ab distinctio possimus? Deleniti pariatur
-      officia eligendi quia. Tempora voluptas ab quos nemo, temporibus alias
-      perspiciatis sed sint deleniti. Ab ut earum at molestias ea, rem aut
-      obcaecati, sapiente vitae facere repudiandae perferendis distinctio
-      architecto dolorum quo? Voluptates incidunt excepturi accusamus. Velit in
-      enim iusto est cumque, provident sit.
-    </p>
-
-    <div id="mapLondon"></div>
+    
 
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
