--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -12,18 +16,16 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/script.js"></script>
 
     <script
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.1/dist/email.min.js"
     ></script>
-  <script type="text/javascript">
-   (function(){
-      emailjs.init("user_8FmYcOiKwGhh65a0xmExM");
-     
-        })();
-</script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("user_8FmYcOiKwGhh65a0xmExM");
+      })();
+    </script>
 
     <title>Bar Hop UK</title>
   </head>
@@ -64,8 +66,8 @@
     <div id="beertap-pic"></div>
     <div id="map"></div>
     <div class="container-fluid">
-      <div class="col">
-        <div class="row"></div>
+      <div class="row">
+        <div class="col"></div>
       </div>
     </div>
 
@@ -86,45 +88,7 @@
     <h2 class="offer-heading">What we offer</h2>
     <div class="container offer-container">
       <div class="row">
-        <div class="col-sm">
-          stuff and stuff and beers
-        </div>
-        <div class="col-sm">
-          <div class="row">
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <h2 clas="cities-headin jumbotron">Cities</h2>
-
-    <div class="container">
-      <div class="row">
-        <div class="col">
+        <div class="col-6">
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis quas
             aperiam dolorem quod? Aliquid odio quis, consequuntur suscipit
@@ -132,16 +96,63 @@
             provident tempora obcaecati.
           </p>
         </div>
-        <div class="col">
-          <ul class="city-list">
-            <li><a href="">London</a></li>
-            <li><a href="manchester.html">Manchester</a></li>
-            <li><a href="">Leeds</a></li>
-          </ul>
+      </div>
+    </div>
+
+    <h2 class="cities-heading jumbotron">Cities</h2>
+
+    <div class="container cities-container">
+      <div class="row  cities-row">
+        <div class="col-12 col-md-4">
+          <div class="card card-london" style="width: 18rem;">
+            <img
+              src="assets/images/London_Tower_Bridge_City.webp"
+              class="card-img-top"
+              alt="..."
+              height="214px;"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="london.html">London</a>
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12 col-md-4">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="assets/images/manchester- night.jpg"
+              class="card-img-top"
+              alt="..."
+              height="214px;"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="manchester.html"> Manchester</a>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-4 col-">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="assets/images/liverpool.jpeg"
+              class="card-img-top"
+              alt="..."
+              height="214px;"
+            />
+            <div class="card-body">
+              <p class="card-text">
+                <a href="liverpool.html"> Liverpool</a>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  <section class="container-fluid">
+
+    <section class="container-fluid">
       <div class="row-bg-color-contact">
         <div class="col">
           <h3 class="contact-heading uppercase text-center">
@@ -186,7 +197,21 @@
         </div>
       </div>
     </section>
-   
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+      crossorigin="anonymous"
+    ></script>
     <script src="assets/js/email.js"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
