--- a/test.html
+++ b/test.html
@@ -52,25 +52,65 @@
     </nav>
     <h1 id="tours">Test</h1>
     <div class="container">
-      <div class="col">
-       
-      </div>
+      <div class="col"></div>
     </div>
 
-    
-     <div id="floating-panel">
-    <b>Start: </b>
-    <select id="start">
-    <option value="7-8, Piccadilly Trading Estate, Manchester M1 2NP">Cloudwater</option>
- </select>
-    <b>End: </b>
-    <select id="end">
-    <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ">Shindigger</option>
-    </select>
+    <div id="floating-panel">
+      <b>Start: </b>
+      <select id="start">
+        <option
+          value="Unit 9 Piccadilly Trading Estate,
+Manchester, M1 2NP"
+          >Cloudwater</option
+        >
+      </select>
+
+      <b>Quarter: </b>
+      <select id="quarter">
+        <option
+          value="Track Brewing Co 
+Unit 5 
+Sheffield Street 
+Manchester 
+M1 2ND "
+          >Track</option
+        >
+      </select>
+
+      <b>Middle: </b>
+      <select id="middle">
+        <option
+          value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+          >Pamona</option
+        >
+      </select>
+
+      <b>End: </b>
+      <select id="end">
+        <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+          >Shindigger</option
+        >
+        <option value="W 49th St & 5th Ave, New York, NY 10020"
+          >Rockefeller Center</option
+        >
+        <option value="moma, New York, NY">MOMA</option>
+        <option value="350 5th Ave, New York, NY, 10118"
+          >Empire State Building</option
+        >
+        <option value="253 West 125th Street, New York, NY"
+          >Apollo Theater</option
+        >
+        <option value="1 Wall St, New York, NY">Wall St</option>
+      </select>
     </div>
-
-   <div id="mapTest"></div>
-
+    <div id="mapTest"></div>
+    &nbsp;
+    <div id="warnings-panel"></div>
+    <script
+      src="https://code.jquery.com/jquery-3.5.0.js"
+      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
