centered city pics

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <li class="nav-item">
             <a class="nav-link" href="test.html">Test</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="waypoint.html">Waypoint</a>
+          </li>
         </ul>
         <span class="navbar-text">
           Navbar text with an inline element
@@ -101,17 +104,17 @@
 
     <h2 class="cities-heading jumbotron">Cities</h2>
 
-    <div class="container cities-container">
-      <div class="row  cities-row">
-        <div class="col-12 col-md-4">
-          <div class="card card-london" style="width: 18rem;">
+    <div class="container-fluid cities-container">
+      <div class="row no-gutters">
+        <div class="col-12 col-md-4 d-flex justify-content-center">
+          <div class=" card-london" style="width: 18rem;">
             <img
               src="assets/images/London_Tower_Bridge_City.webp"
               class="card-img-top"
               alt="..."
               height="214px;"
             />
-            <div class="card-body">
+            <div class="card card-body">
               <p class="card-text">
                 <a href="london.html">London</a>
               </p>
@@ -119,8 +122,8 @@
           </div>
         </div>
 
-        <div class="col-12 col-md-4">
-          <div class="card" style="width: 18rem;">
+        <div class="col-12 col-md-4 d-flex justify-content-center">
+          <div class="" style="width: 18rem;">
             <img
               src="assets/images/manchester- night.jpg"
               class="card-img-top"
@@ -134,8 +137,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-md-4 col-">
-          <div class="card" style="width: 18rem;">
+        <div class="col-12 col-md-4 d-flex justify-content-center">
+          <div class="c" style="width: 18rem;">
             <img
               src="assets/images/liverpool.jpeg"
               class="card-img-top"
