--- a/waypoint.html
+++ b/waypoint.html
@@ -50,7 +50,7 @@
       </div>
     </nav>
 
-    <div id="mapManchester"></div>
+    <div id="mapWaypoint"></div>
     <div id="right-panel">
       <div>
         <b>Start:</b>
@@ -75,6 +75,27 @@ M1 2ND "
 
           <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
             >Shindigger</option
+          >
+          <option value=" 66 N Western St, Manchester M12 6DD"
+            >Manchester Brewing</option
+          >
+          <option value="99 N Western St, Manchester M12 6JL"
+            >Alphabet Brewing</option
+          >
+          <option value="75 N Western St, Manchester M12 6DY"
+            >Beer Nouveau</option
+          >
+          <option value="Tonge St, Manchester M12 6LY"
+            >Squawk Brewing Company</option
+          >
+          <option value="69 N Western St, Manchester M12 6DX"
+            >Chorlton Brewing Company</option
+          >
+          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+            >Beatnikz Republic Brewing Co.
+          </option>
+          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+            >Joseph Holt Brewery</option
           >
         </select>
         <br />
@@ -102,6 +123,27 @@ M1 2ND "
           <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
             >Shindigger</option
           >
+          <option value=" 66 N Western St, Manchester M12 6DD"
+            >Manchester Brewing</option
+          >
+          <option value="99 N Western St, Manchester M12 6JL"
+            >Alphabet Brewing</option
+          >
+          <option value="75 N Western St, Manchester M12 6DY"
+            >Beer Nouveau</option
+          >
+          <option value="Tonge St, Manchester M12 6LY"
+            >Squawk Brewing Company</option
+          >
+          <option value="69 N Western St, Manchester M12 6DX"
+            >Chorlton Brewing Company</option
+          >
+          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+            >Beatnikz Republic Brewing Co.
+          </option>
+          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+            >Joseph Holt Brewery</option
+          >
         </select>
         <br />
         <b>End:</b>
@@ -127,6 +169,27 @@ M1 2ND "
           <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
             >Shindigger</option
           >
+          <option value=" 66 N Western St, Manchester M12 6DD"
+            >Manchester Brewing</option
+          >
+          <option value="99 N Western St, Manchester M12 6JL"
+            >Alphabet Brewing</option
+          >
+          <option value="75 N Western St, Manchester M12 6DY"
+            >Beer Nouveau</option
+          >
+          <option value="Tonge St, Manchester M12 6LY"
+            >Squawk Brewing Company</option
+          >
+          <option value="69 N Western St, Manchester M12 6DX"
+            >Chorlton Brewing Company</option
+          >
+          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+            >Beatnikz Republic Brewing Co.
+          </option>
+          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+            >Joseph Holt Brewery</option
+          >
         </select>
         <br />
         <input type="submit" id="submit" />
@@ -134,6 +197,35 @@ M1 2ND "
       <div id="directions-panel"></div>
     </div>
 
+    <div id="panel"></div>
+
+			
+			<div>
+				<div id="info-content">
+					<table>
+						<tr id="iw-url-row" class="iw_table_row">
+							<td id="iw-icon" class="iw_table_icon"></td>
+							<td id="iw-url"></td>
+						</tr>
+						<tr id="iw-address-row" class="iw_table_row">
+							<td class="iw_attribute_name">Address:</td>
+							<td id="iw-address"></td>
+						</tr>
+						<tr id="iw-phone-row" class="iw_table_row">
+							<td class="iw_attribute_name">Telephone:</td>
+							<td id="iw-phone"></td>
+						</tr>
+						<tr id="iw-rating-row" class="iw_table_row">
+							<td class="iw_attribute_name">Rating:</td>
+							<td id="iw-rating"></td>
+						</tr>
+						<tr id="iw-website-row" class="iw_table_row">
+							<td class="iw_attribute_name">Website:</td>
+							<td id="iw-website"></td>
+						</tr>
+					</table>
+				</div>
+			</div>
     <script
       src="https://code.jquery.com/jquery-3.5.0.js"
       integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
