--- a/index.html
+++ b/index.html
@@ -15,6 +15,26 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/53108b937c.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <script
@@ -30,8 +50,8 @@
     <title>Bar Hop UK</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar w/ text</a>
+    <nav class="navbar navbar-expand-lg nav-hop">
+      <a class="navbar-brand" href="index.html">Bar Hop UK</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -74,7 +94,7 @@
       </div>
     </div>
 
-    <h1>About</h1>
+    <h1 class="about-heading">About</h1>
     <div class="about-container">
       <div class="col">
         <div class="row">
@@ -107,7 +127,7 @@
     <div class="container-fluid cities-container">
       <div class="row no-gutters">
         <div class="col-12 col-md-4 d-flex justify-content-center">
-          <div class=" card-london" style="width: 18rem;">
+          <div class="card-london" style="width: 18rem;">
             <img
               src="assets/images/London_Tower_Bridge_City.webp"
               class="card-img-top"
@@ -123,7 +143,7 @@
         </div>
 
         <div class="col-12 col-md-4 d-flex justify-content-center">
-          <div class="" style="width: 18rem;">
+          <div class="card card-manchester" style="width: 18rem;">
             <img
               src="assets/images/manchester- night.jpg"
               class="card-img-top"
@@ -138,16 +158,17 @@
           </div>
         </div>
         <div class="col-12 col-md-4 d-flex justify-content-center">
-          <div class="c" style="width: 18rem;">
-            <img
-              src="assets/images/liverpool.jpeg"
-              class="card-img-top"
-              alt="..."
-              height="214px;"
-            />
+          <div class="card card-liverpool" style="width: 18rem;">
+            <a href="liverpool.html">
+              <img
+                src="assets/images/liverpool.jpeg"
+                class="card-img-top"
+                alt="..."
+                height="214px;"
+            /></a>
             <div class="card-body">
               <p class="card-text">
-                <a href="liverpool.html"> Liverpool</a>
+                Liverpool
               </p>
             </div>
           </div>
@@ -155,72 +176,92 @@
       </div>
     </div>
 
-    <section class="container-fluid">
-      <div class="row-bg-color-contact">
-        <div class="col">
-          <h3 class="contact-heading uppercase text-center">
-            Sign up for our monthly newsletter!
-          </h3>
-          <h5 class="uppercase text-center">Lets drink together!</h5>
-          <div class="center-form">
-            <form onsubmit="return sendMail(this);">
-              <input
-                type="text"
-                name="name"
-                id="fullname"
-                class="form-control"
-                placeholder="Name"
-                required
-              />
-              <input
-                type="email"
-                name="email"
-                id="emailaddress"
-                class="form-control"
-                placeholder="Email"
-                required
-              />
-              <textarea
-                type="newsletter"
-                name="newsletter"
-                id="newsletter"
-                class="form-control"
-                placeholder="BEER"
-                required
-              ></textarea>
-              <div class="form-row text-center">
+    <a href="#signUpModal" data-toggle="modal"> Newletter</a>
+
+    <div
+      class="modal fade"
+      id="signUpModal"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Bar Hop Monthly</h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true"><i class="fas fa-beer"></i></span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <section class="container-fluid">
+              <div class="row-bg-color-contact">
                 <div class="col">
-                  <button type="submit" class="btn btn-secondary">
-                    Send Project Request
-                  </button>
+                  <h3 class="contact-heading uppercase text-center">
+                    Sign up for our monthly newsletter!
+                  </h3>
+                  <h5 class="uppercase text-center">Lets drink together!</h5>
+                  <div class="center-form">
+                    <form onsubmit="return sendMail(this);">
+                      <input
+                        type="text"
+                        name="name"
+                        id="fullname"
+                        class="form-control"
+                        placeholder="Name"
+                        required
+                      />
+                      <input
+                        type="email"
+                        name="email"
+                        id="emailaddress"
+                        class="form-control"
+                        placeholder="Email"
+                        required
+                      />
+                      <textarea
+                        type="newsletter"
+                        name="newsletter"
+                        id="newsletter"
+                        class="form-control"
+                        placeholder="BEER"
+                        required
+                      ></textarea>
+                      <div class="form-row text-center">
+                        <div class="col">
+                          <button type="submit" class="btn btn-secondary">
+                            Send Project Request
+                          </button>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
                 </div>
               </div>
-            </form>
+            </section>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-dismiss="modal"
+            >
+              Close
+            </button>
+            <button type="button" class="btn btn-primary">Save changes</button>
           </div>
         </div>
       </div>
-    </section>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+    </div>
+
+    <script src="assets/js/test.js"></script>
     <script src="assets/js/email.js"></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
-      async
-      defer
-    ></script>
   </body>
 </html>
