--- a/manchester.html
+++ b/manchester.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/manchester.js"></script>
+    <script src="assets/js/waypoint.js"></script>
 
     <title>Document</title>
   </head>
@@ -49,47 +49,165 @@
         </span>
       </div>
     </nav>
-    <h1 id="tours">Tours</h1>
-    <div class="container">
-      <div class="col">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          cumque odit, libero ratione, veniam in similique, reiciendis accusamus
-          non minima nostrum rerum eveniet dolorem atque soluta ex porro
-          eligendi aperiam.
-        </p>
+
+    <div id="mapWaypoint"></div>
+    <div id="right-panel">
+      <div>
+        <b>Start:</b>
+        <select id="start">
+          <option
+            value="Unit 9 Piccadilly Trading Estate,
+Manchester, M1 2NP"
+            >Cloud Water</option
+          >
+          <option
+            value="Track Brewing Co 
+Unit 5 
+Sheffield Street 
+Manchester 
+M1 2ND "
+            >Track</option
+          >
+          <option
+            value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+            >Pamona</option
+          >
+
+          <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+            >Shindigger</option
+          >
+          <option value=" 66 N Western St, Manchester M12 6DD"
+            >Manchester Brewing</option
+          >
+          <option value="99 N Western St, Manchester M12 6JL"
+            >Alphabet Brewing</option
+          >
+          <option value="75 N Western St, Manchester M12 6DY"
+            >Beer Nouveau</option
+          >
+          <option value="Tonge St, Manchester M12 6LY"
+            >Squawk Brewing Company</option
+          >
+          <option value="69 N Western St, Manchester M12 6DX"
+            >Chorlton Brewing Company</option
+          >
+          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+            >Beatnikz Republic Brewing Co.
+          </option>
+          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+            >Joseph Holt Brewery</option
+          >
+        </select>
+        <br />
+        <b>Waypoints:</b> <br />
+        <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
+        <select multiple id="waypoints">
+          <option
+            value="Unit 9 Piccadilly Trading Estate,
+Manchester, M1 2NP"
+            >Cloud Water</option
+          >
+          <option
+            value="Track Brewing Co 
+Unit 5 
+Sheffield Street 
+Manchester 
+M1 2ND "
+            >Track</option
+          >
+          <option
+            value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+            >Pamona</option
+          >
+
+          <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+            >Shindigger</option
+          >
+          <option value=" 66 N Western St, Manchester M12 6DD"
+            >Manchester Brewing</option
+          >
+          <option value="99 N Western St, Manchester M12 6JL"
+            >Alphabet Brewing</option
+          >
+          <option value="75 N Western St, Manchester M12 6DY"
+            >Beer Nouveau</option
+          >
+          <option value="Tonge St, Manchester M12 6LY"
+            >Squawk Brewing Company</option
+          >
+          <option value="69 N Western St, Manchester M12 6DX"
+            >Chorlton Brewing Company</option
+          >
+          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+            >Beatnikz Republic Brewing Co.
+          </option>
+          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+            >Joseph Holt Brewery</option
+          >
+        </select>
+        <br />
+        <b>End:</b>
+        <select id="end">
+          <option
+            value="Unit 9 Piccadilly Trading Estate,
+Manchester, M1 2NP"
+            >Cloud Water</option
+          >
+          <option
+            value="Track Brewing Co 
+Unit 5 
+Sheffield Street 
+Manchester 
+M1 2ND "
+            >Track</option
+          >
+          <option
+            value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+            >Pamona</option
+          >
+
+          <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+            >Shindigger</option
+          >
+          <option value=" 66 N Western St, Manchester M12 6DD"
+            >Manchester Brewing</option
+          >
+          <option value="99 N Western St, Manchester M12 6JL"
+            >Alphabet Brewing</option
+          >
+          <option value="75 N Western St, Manchester M12 6DY"
+            >Beer Nouveau</option
+          >
+          <option value="Tonge St, Manchester M12 6LY"
+            >Squawk Brewing Company</option
+          >
+          <option value="69 N Western St, Manchester M12 6DX"
+            >Chorlton Brewing Company</option
+          >
+          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+            >Beatnikz Republic Brewing Co.
+          </option>
+          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+            >Joseph Holt Brewery</option
+          >
+        </select>
+        <br />
+        <input type="submit" id="submit" />
       </div>
-    </div>
-    <h2>Manchester</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-      recusandae dicta temporibus tempora libero. Rem iure laborum ratione
-      pariatur dolores dicta nesciunt enim! Harum sit voluptatum officiis autem
-      magnam eum? Voluptatibus earum debitis obcaecati expedita accusantium,
-      fuga perferendis temporibus possimus amet illo. Officiis sequi doloribus
-      ab repellat necessitatibus harum ipsa id dolorem repudiandae. Ad
-      dignissimos perferendis nam, iste laboriosam consectetur. Exercitationem
-      illum perspiciatis alias quia aliquid optio molestias sapiente recusandae
-      laboriosam beatae veritatis mollitia, asperiores numquam ex quos ipsum
-      similique consequuntur nesciunt minus magni nisi enim omnis. Sequi, hic
-      placeat. Sunt maiores quibusdam nesciunt similique, recusandae commodi
-      quod, laborum ipsum, error ab distinctio possimus? Deleniti pariatur
-      officia eligendi quia. Tempora voluptas ab quos nemo, temporibus alias
-      perspiciatis sed sint deleniti. Ab ut earum at molestias ea, rem aut
-      obcaecati, sapiente vitae facere repudiandae perferendis distinctio
-      architecto dolorum quo? Voluptates incidunt excepturi accusamus. Velit in
-      enim iusto est cumque, provident sit.
-    </p>
-
-    <div id="map-box">
-      <div id="mapManchester"></div>
+      <div id="directions-panel"></div>
     </div>
 
-    
-<script
-  src="https://code.jquery.com/jquery-3.5.0.js"
-  integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
-  crossorigin="anonymous"></script>
+    <div id="panel"></div>
+
+			
+		
+				<div id="info-content"></div>
+					
+    <script
+      src="https://code.jquery.com/jquery-3.5.0.js"
+      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
