added logo and started read me file

--- a/index.html
+++ b/index.html
@@ -50,8 +50,14 @@
     <title>Bar Hop UK</title>
   </head>
   <body>
+   
+
     <nav class="navbar navbar-expand-lg nav-hop">
-      <a class="navbar-brand" href="index.html">Bar Hop UK</a>
+      <a class="navbar-brand" href="index.html"> <div class="nav-bar-logo">
+      <div id="BarHop-log">
+        <img src="assets/images/Bar Hop UK (1).png" class="logo" alt="Bar-Hop-UK" />
+      </div>
+    </div></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -85,21 +91,14 @@
         </span>
       </div>
     </nav>
-    <div id="beertap-pic">
-      <div class="col-12">
-        <h1>Bar Hop UK</h1>
-      </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col"></div>
-      </div>
+    <div class="container-fluid landing-container">
+      <div id="beertap-pic"></div>
     </div>
 
     <h1 class="about-heading">About</h1>
     <div class="about-container">
-      <div class="col">
-        <div class="row">
+      <div class="row">
+        <div class="col-md-6 offset-md-3 col-xs-4">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error
             ipsa neque nulla quas possimus earum officiis ratione, consectetur
@@ -203,8 +202,7 @@
       </div>
     </div>
 
-
-	<!-- /.Modal ----------------------------------->
+    <!-- /.Modal ----------------------------------->
 
     <div class="container newsletter-container">
       <a href="#signUpModal" data-toggle="modal"
@@ -296,22 +294,25 @@
       </div>
     </div>
 
-    <div class="container" id="newsletter" >
+    <div class="container" id="newsletter">
       <div class="row">
         <div class="col-6">
-       <p>Sign up to our monthly newsletter so we can keep you in the know about everything that is beer.
-       Bar Hop UK is free to use app with premium option that willl soon be available</p>
+          <p>
+            Sign up to our monthly newsletter so we can keep you in the know
+            about everything that is beer. Bar Hop UK is free to use app with
+            premium option that willl soon be available
+          </p>
         </div>
-       <div class="col-6">
-       <ul>
-       <li>Tours</li>
-       <li>Discounts</li>
-       <li>Become a beer server</li>
-       <li>Learn to home brew</li>
-       <li>Access more breweries across the UK</li>
-       <li>Discount to beer festivals and events</li>
-       </ul>
-       </div>
+        <div class="col-6">
+          <ul>
+            <li>Tours</li>
+            <li>Discounts</li>
+            <li>Become a beer server</li>
+            <li>Learn to home brew</li>
+            <li>Access more breweries across the UK</li>
+            <li>Discount to beer festivals and events</li>
+          </ul>
+        </div>
       </div>
     </div>
 
