--- a/manchester.html
+++ b/manchester.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <script src="assets/js/waypoint.js"></script>
+    <script src="assets/js/manchester.js"></script>
 
     <title>Document</title>
   </head>
@@ -50,160 +50,163 @@
       </div>
     </nav>
 
-    <div id="mapWaypoint"></div>
-    <div id="right-panel">
-      <div>
-        <b>Start:</b>
-        <select id="start">
-          <option
-            value="Unit 9 Piccadilly Trading Estate,
+
+    <div class="container-fluid manchester-container">
+    <div class="row">
+    <div class="col">
+      <div id="mapManchester"></div>
+      <div id="right-panel">
+        <div>
+          <b>Start:</b>
+          <select id="start">
+            <option
+              value="Unit 9 Piccadilly Trading Estate,
 Manchester, M1 2NP"
-            >Cloud Water</option
-          >
-          <option
-            value="Track Brewing Co 
+              >Cloud Water</option
+            >
+            <option
+              value="Track Brewing Co 
 Unit 5 
 Sheffield Street 
 Manchester 
 M1 2ND "
-            >Track</option
-          >
-          <option
-            value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
-            >Pamona</option
-          >
+              >Track</option
+            >
+            <option
+              value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+              >Pamona</option
+            >
 
-          <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
-            >Shindigger</option
-          >
-          <option value=" 66 N Western St, Manchester M12 6DD"
-            >Manchester Brewing</option
-          >
-          <option value="99 N Western St, Manchester M12 6JL"
-            >Alphabet Brewing</option
-          >
-          <option value="75 N Western St, Manchester M12 6DY"
-            >Beer Nouveau</option
-          >
-          <option value="Tonge St, Manchester M12 6LY"
-            >Squawk Brewing Company</option
-          >
-          <option value="69 N Western St, Manchester M12 6DX"
-            >Chorlton Brewing Company</option
-          >
-          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
-            >Beatnikz Republic Brewing Co.
-          </option>
-          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
-            >Joseph Holt Brewery</option
-          >
-        </select>
-        <br />
-        <b>Waypoints:</b> <br />
-        <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
-        <select multiple id="waypoints">
-          <option
-            value="Unit 9 Piccadilly Trading Estate,
+            <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+              >Shindigger</option
+            >
+            <option value=" 66 N Western St, Manchester M12 6DD"
+              >Manchester Brewing</option
+            >
+            <option value="99 N Western St, Manchester M12 6JL"
+              >Alphabet Brewing</option
+            >
+            <option value="75 N Western St, Manchester M12 6DY"
+              >Beer Nouveau</option
+            >
+            <option value="Tonge St, Manchester M12 6LY"
+              >Squawk Brewing Company</option
+            >
+            <option value="69 N Western St, Manchester M12 6DX"
+              >Chorlton Brewing Company</option
+            >
+            <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+              >Beatnikz Republic Brewing Co.
+            </option>
+            <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+              >Joseph Holt Brewery</option
+            >
+          </select>
+          <br />
+          <b>Waypoints:</b> <br />
+          <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
+          <select multiple id="waypoints">
+            <option
+              value="Unit 9 Piccadilly Trading Estate,
 Manchester, M1 2NP"
-            >Cloud Water</option
-          >
-          <option
-            value="Track Brewing Co 
+              >Cloud Water</option
+            >
+            <option
+              value="Track Brewing Co 
 Unit 5 
 Sheffield Street 
 Manchester 
 M1 2ND "
-            >Track</option
-          >
-          <option
-            value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
-            >Pamona</option
-          >
+              >Track</option
+            >
+            <option
+              value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+              >Pamona</option
+            >
 
-          <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
-            >Shindigger</option
-          >
-          <option value=" 66 N Western St, Manchester M12 6DD"
-            >Manchester Brewing</option
-          >
-          <option value="99 N Western St, Manchester M12 6JL"
-            >Alphabet Brewing</option
-          >
-          <option value="75 N Western St, Manchester M12 6DY"
-            >Beer Nouveau</option
-          >
-          <option value="Tonge St, Manchester M12 6LY"
-            >Squawk Brewing Company</option
-          >
-          <option value="69 N Western St, Manchester M12 6DX"
-            >Chorlton Brewing Company</option
-          >
-          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
-            >Beatnikz Republic Brewing Co.
-          </option>
-          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
-            >Joseph Holt Brewery</option
-          >
-        </select>
-        <br />
-        <b>End:</b>
-        <select id="end">
-          <option
-            value="Unit 9 Piccadilly Trading Estate,
+            <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+              >Shindigger</option
+            >
+            <option value=" 66 N Western St, Manchester M12 6DD"
+              >Manchester Brewing</option
+            >
+            <option value="99 N Western St, Manchester M12 6JL"
+              >Alphabet Brewing</option
+            >
+            <option value="75 N Western St, Manchester M12 6DY"
+              >Beer Nouveau</option
+            >
+            <option value="Tonge St, Manchester M12 6LY"
+              >Squawk Brewing Company</option
+            >
+            <option value="69 N Western St, Manchester M12 6DX"
+              >Chorlton Brewing Company</option
+            >
+            <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+              >Beatnikz Republic Brewing Co.
+            </option>
+            <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+              >Joseph Holt Brewery</option
+            >
+          </select>
+          <br />
+          <b>End:</b>
+          <select id="end">
+            <option
+              value="Unit 9 Piccadilly Trading Estate,
 Manchester, M1 2NP"
-            >Cloud Water</option
-          >
-          <option
-            value="Track Brewing Co 
+              >Cloud Water</option
+            >
+            <option
+              value="Track Brewing Co 
 Unit 5 
 Sheffield Street 
 Manchester 
 M1 2ND "
-            >Track</option
-          >
-          <option
-            value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
-            >Pamona</option
-          >
+              >Track</option
+            >
+            <option
+              value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+              >Pamona</option
+            >
 
-          <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
-            >Shindigger</option
-          >
-          <option value=" 66 N Western St, Manchester M12 6DD"
-            >Manchester Brewing</option
-          >
-          <option value="99 N Western St, Manchester M12 6JL"
-            >Alphabet Brewing</option
-          >
-          <option value="75 N Western St, Manchester M12 6DY"
-            >Beer Nouveau</option
-          >
-          <option value="Tonge St, Manchester M12 6LY"
-            >Squawk Brewing Company</option
-          >
-          <option value="69 N Western St, Manchester M12 6DX"
-            >Chorlton Brewing Company</option
-          >
-          <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
-            >Beatnikz Republic Brewing Co.
-          </option>
-          <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
-            >Joseph Holt Brewery</option
-          >
-        </select>
-        <br />
-        <input type="submit" id="submit" />
+            <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+              >Shindigger</option
+            >
+            <option value=" 66 N Western St, Manchester M12 6DD"
+              >Manchester Brewing</option
+            >
+            <option value="99 N Western St, Manchester M12 6JL"
+              >Alphabet Brewing</option
+            >
+            <option value="75 N Western St, Manchester M12 6DY"
+              >Beer Nouveau</option
+            >
+            <option value="Tonge St, Manchester M12 6LY"
+              >Squawk Brewing Company</option
+            >
+            <option value="69 N Western St, Manchester M12 6DX"
+              >Chorlton Brewing Company</option
+            >
+            <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+              >Beatnikz Republic Brewing Co.
+            </option>
+            <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+              >Joseph Holt Brewery</option
+            >
+          </select>
+          <br />
+          <input type="submit" id="submit" />
+        </div>
       </div>
-      <div id="directions-panel"></div>
-    </div>
-
-    <div id="panel"></div>
-
-			
-		
-				<div id="info-content"></div>
-					
-    <script
+      <div class="container directions-container">
+        <div id="directions-panel"></div>
+      </div>
+     </div>
+         </div>
+     </div>
+      
+     <script
       src="https://code.jquery.com/jquery-3.5.0.js"
       integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
       crossorigin="anonymous"
