changed navbar color targeting bg-light class

--- a/london.html
+++ b/london.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/london.css" />
     <script src="assets/js/london.js"></script>
 
     <title>Document</title>
@@ -51,38 +51,9 @@
       </div>
     </nav>
     <h1 id="tours">Tours</h1>
-    <div class="container">
-      <div class="col">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque
-          cumque odit, libero ratione, veniam in similique, reiciendis accusamus
-          non minima nostrum rerum eveniet dolorem atque soluta ex porro
-          eligendi aperiam.
-        </p>
-      </div>
-    </div>
-
-    <h2>London</h2>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae
-      recusandae dicta temporibus tempora libero. Rem iure laborum ratione
-      pariatur dolores dicta nesciunt enim! Harum sit voluptatum officiis autem
-      magnam eum? Voluptatibus earum debitis obcaecati expedita accusantium,
-      fuga perferendis temporibus possimus amet illo. Officiis sequi doloribus
-      ab repellat necessitatibus harum ipsa id dolorem repudiandae. Ad
-      dignissimos perferendis nam, iste laboriosam consectetur. Exercitationem
-      illum perspiciatis alias quia aliquid optio molestias sapiente recusandae
-      laboriosam beatae veritatis mollitia, asperiores numquam ex quos ipsum
-      similique consequuntur nesciunt minus magni nisi enim omnis. Sequi, hic
-      placeat. Sunt maiores quibusdam nesciunt similique, recusandae commodi
-      quod, laborum ipsum, error ab distinctio possimus? Deleniti pariatur
-      officia eligendi quia. Tempora voluptas ab quos nemo, temporibus alias
-      perspiciatis sed sint deleniti. Ab ut earum at molestias ea, rem aut
-      obcaecati, sapiente vitae facere repudiandae perferendis distinctio
-      architecto dolorum quo? Voluptates incidunt excepturi accusamus. Velit in
-      enim iusto est cumque, provident sit.
-    </p>
-
+   
+     
+        
    <div id="mapLondon"></div>
 
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
