added breweries to London and Liverpool pages

--- a/manchester.html
+++ b/manchester.html
@@ -42,9 +42,10 @@
     <title>Document</title>
   </head>
   <body>
-    <!------------------------Navbar----------------------------->
+   
+  <!------------------------Navbar----------------------------->
 
-   <nav class="navbar navbar-expand-md navbar-light bg-light">
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
         class="navbar-toggler ml-auto"
         type="button"
@@ -75,19 +76,19 @@
             >
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#about-man">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#nearyou">Breweries near you</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#cities">Cities</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#newsletter">Newsletter</a>
           </li>
           <li class="nav-item">
-            <a
-              class="nav-link disabled"
-              href="#newsletter"
-              tabindex="-1"
-              aria-disabled="true"
-              >Newsletter</a
-            >
+            <a class="nav-link" href="#join">Join</a>
           </li>
         </ul>
       </div>
