--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <title>Bar Hop UK</title>
   </head>
   <body>
+
     <!------------------------Navbar----------------------------->
 
     <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -77,6 +78,8 @@
         ></a>
 
         <ul class="navbar-nav ml-auto nav-list">
+
+         
           <li class="nav-item active">
             <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
@@ -97,15 +100,6 @@
           <li class="nav-item">
             <a class="nav-link" href="#join">Join</a>
           </li>
-          <li class="nav-item">
-            <a
-              class="nav-link disabled"
-              href="#newsletter"
-              tabindex="-1"
-              aria-disabled="true"
-              >Newsletter</a
-            >
-          </li>
         </ul>
       </div>
     </nav>
@@ -116,7 +110,8 @@
 
     <!------------------------About heading----------------------------->
 
-    <h1 class="about-heading" id="about">
+    <h1 class="about-heading" id="about about-man">
+
       <!------------------------About icon----------------------------->
       <img
         src="assets/images/Bar-Hop-UK.png"
@@ -210,7 +205,7 @@
               ><img
                 src="assets/images/London_Tower_Bridge_City.webp"
                 class="card-img-top"
-                alt="..."
+                alt="Tower bridge in London"
                 height="214px;"
             /></a>
             <div class="card card-body">
@@ -227,12 +222,12 @@
               <img
                 src="assets/images/manchester- night.jpg"
                 class="card-img-top"
-                alt="..."
+                alt="Buildings in Mnachester"
                 height="214px;"
             /></a>
             <div class="card-body">
               <p class="card-text">
-                <a href="manchester.html" target="_blank"> Manchester</a>
+                <a href="manchester.html" > Manchester</a>
               </p>
             </div>
           </div>
@@ -243,7 +238,7 @@
               <img
                 src="assets/images/liverpool.jpeg"
                 class="card-img-top"
-                alt="..."
+                alt="Buildings in Liverpool"
                 height="214px;"
             /></a>
             <div class="card-body">
@@ -436,9 +431,7 @@
         <blockquote class="blockquote mb-0">
           <p>Meet like mineded people and explore a world of craft beer.</p>
           <footer class="blockquote-footer">
-            <small class="text-muted">
-              Someone famous in <cite title="Source Title">Source Title</cite>
-            </small>
+           
           </footer>
         </blockquote>
       </div>
