--- a/liverpool.html
+++ b/liverpool.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
       type="text/css"
@@ -35,31 +35,304 @@
       src="https://kit.fontawesome.com/53108b937c.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="assets/css/liverpool.css" />
 
-    <script src="assets/js/liverpool.js"></script>
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/js/manchester.js"></script>
 
     <title>Document</title>
   </head>
   <body>
-   <div id="menu-bar">
-			<div id="menu" onclick="onClickMenu()">
-				<div id="bar1" class="bar"></div>
-				<div id="bar2" class="bar"></div>
-				<div id="bar3" class="bar"></div>
-			</div>
-			<ul class="nav" id="nav">
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Blog</a></li>
-				<li><a href="#">Gallery</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul>
-		</div>
-		<div class="menu-bg" id="menu-bg"></div>
+    <!------------------------Navbar----------------------------->
 
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
+      <button
+        class="navbar-toggler ml-auto"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <a href="index.html">
+          <div class="logo">
+            <div id="BarHop-logo">
+              <img
+                src="assets/images/Bar Hop UK (1).png"
+                class="logo bar-hop-logo"
+                alt="Bar-Hop-UK"
+              />
+            </div></div
+        ></a>
 
-   
+        <ul class="navbar-nav ml-auto nav-list">
+          <li class="nav-item active">
+            <a class="nav-link" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#nearyou">Breweries near you</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#cities">Cities</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#newsletter">Newsletter</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#join">Join</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <div class="container directions-container">
+      <div class="row">
+        <div class="col">
+          <h2 class="manchester-heading">Manchester</h2>
+          <p>
+            Using the brewery locater panel choose from the list of breweries
+            which you would like to visit. Choose brewery from which you would
+            like to start from a brewery yoy would like to finsh your journey on
+            and as many as you would like in between.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid manchester-container">
+      <div class="row">
+        <div class="col">
+          <div id="mapManchester"></div>
+          <div id="right-panel">
+            <div>
+              <b>Starting-Brewery:</b>
+              <select id="start">
+                <option value="Liverpool Rd N, Burscough, Ormskirk L40 4BY"
+                  >The Hop Vine</option
+                >
+                <option value="3 Kings Dock St, Liverpool L1 8JU"
+                  >Black Lodge Brewing</option
+                >
+                <option value="62 Bridgewater St, Liverpool L1 0AY"
+                  >Love Lane Brewery, bar and kitchen</option
+                >
+
+                <option value="18 Severs St, Liverpool L6 5HJ"
+                  >AD HOP brewing</option
+                >
+                <option value="Stanhope St, Liverpool L8 5XJ"
+                  >Cains Brewery Village</option
+                >
+                <option value="Waverley St, Liverpool, Bootle L20 4AP"
+                  >Stamps Brewery</option
+                >
+                <option
+                  value="74 Venture Point West, Evans Road, Speke, Liverpool L24 9PB"
+                  >Big Bog Brewing Company Limited</option
+                >
+                <option
+                  value="Unit 1, Sefton Lane Industrial Estate, Sefton Ln, Maghull, Liverpool L31 8BX"
+                  >Neptune Brewery & Taproom</option
+                >
+                <option value="39 Stanhope St, Liverpool L8 5RE"
+                  >The Brewery Tap</option
+                >
+                <option value="Unit 3 Lightbox, Knox St, Birkenhead CH41 5JW"
+                  >Glen Affric Brewery
+                </option>
+                <option value="3nl, 8 Pool St, Birkenhead CH41 3NL"
+                  >Peerless Brewing Company Limited</option
+                >
+                <option value="Stephenson Way, Liverpool L37 8EG"
+                  >Red Star Brewery</option
+                >
+                <option
+                  value="6 Little Crosby Rd, Little Crosby, Liverpool L23 4TS"
+                  >Rock The Boat Brewery</option
+                >
+                <option
+                  value="Unit 11 Diamond Business Park, Sandwash Close, St Helens, Rainford WA11 8LY"
+                  >George Wright Brewing Company</option
+                >
+                <option value="Archway Rd, Huyton, Liverpool L36 9UJ"
+                  >The Barker's Brewery</option
+                >
+                <option
+                  value="Brimstage Brewery, Brimstage Ln, Brimstage, Wirral CH63 6HY"
+                  >Brimstage Brewery</option
+                >
+                <option value="Clifton Rd, Beechwood, Runcorn WA7 3EH"
+                  >Chapter Brewing Company
+                </option>
+                <option
+                  value="Wolverhampton House, 121-, 125 Church Street, Saint Helens WA10 1AJ"
+                  >Connoisseur Ales</option
+                >
+                <option
+                  value="3, Enterprise Business Park, Russell Rd, Blowick, Southport PR9 7RF"
+                  >Southport Brewery</option
+                >
+              </select>
+              <br />
+              <b>Waypoint-point breweries:</b> <br />
+              <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
+              <select multiple id="waypoints">
+                <option value="Liverpool Rd N, Burscough, Ormskirk L40 4BY"
+                  >The Hop Vine</option
+                >
+                <option value="3 Kings Dock St, Liverpool L1 8JU"
+                  >Black Lodge Brewing</option
+                >
+                <option value="62 Bridgewater St, Liverpool L1 0AY"
+                  >Love Lane Brewery, bar and kitchen</option
+                >
+
+                <option value="18 Severs St, Liverpool L6 5HJ"
+                  >AD HOP brewing</option
+                >
+                <option value="Stanhope St, Liverpool L8 5XJ"
+                  >Cains Brewery Village</option
+                >
+                <option value="Waverley St, Liverpool, Bootle L20 4AP"
+                  >Stamps Brewery</option
+                >
+                <option
+                  value="74 Venture Point West, Evans Road, Speke, Liverpool L24 9PB"
+                  >Big Bog Brewing Company Limited</option
+                >
+                <option
+                  value="Unit 1, Sefton Lane Industrial Estate, Sefton Ln, Maghull, Liverpool L31 8BX"
+                  >Neptune Brewery & Taproom</option
+                >
+                <option value="39 Stanhope St, Liverpool L8 5RE"
+                  >The Brewery Tap</option
+                >
+                <option value="Unit 3 Lightbox, Knox St, Birkenhead CH41 5JW"
+                  >Glen Affric Brewery
+                </option>
+                <option value="3nl, 8 Pool St, Birkenhead CH41 3NL"
+                  >Peerless Brewing Company Limited</option
+                >
+                <option value="Stephenson Way, Liverpool L37 8EG"
+                  >Red Star Brewery</option
+                >
+                <option
+                  value="6 Little Crosby Rd, Little Crosby, Liverpool L23 4TS"
+                  >Rock The Boat Brewery</option
+                >
+                <option
+                  value="Unit 11 Diamond Business Park, Sandwash Close, St Helens, Rainford WA11 8LY"
+                  >George Wright Brewing Company</option
+                >
+                <option value="Archway Rd, Huyton, Liverpool L36 9UJ"
+                  >The Barker's Brewery</option
+                >
+                <option
+                  value="Brimstage Brewery, Brimstage Ln, Brimstage, Wirral CH63 6HY"
+                  >Brimstage Brewery</option
+                >
+                <option value="Clifton Rd, Beechwood, Runcorn WA7 3EH"
+                  >Chapter Brewing Company
+                </option>
+                <option
+                  value="Wolverhampton House, 121-, 125 Church Street, Saint Helens WA10 1AJ"
+                  >Connoisseur Ales</option
+                >
+                <option
+                  value="3, Enterprise Business Park, Russell Rd, Blowick, Southport PR9 7RF"
+                  >Southport Brewery</option
+                >
+              </select>
+              <br />
+              <b>Finishing-brewery:</b>
+              <select id="end">
+                <option value="Liverpool Rd N, Burscough, Ormskirk L40 4BY"
+                  >The Hop Vine</option
+                >
+                <option value="3 Kings Dock St, Liverpool L1 8JU"
+                  >Black Lodge Brewing</option
+                >
+                <option value="62 Bridgewater St, Liverpool L1 0AY"
+                  >Love Lane Brewery, bar and kitchen</option
+                >
+
+                <option value="18 Severs St, Liverpool L6 5HJ"
+                  >AD HOP brewing</option
+                >
+                <option value="Stanhope St, Liverpool L8 5XJ"
+                  >Cains Brewery Village</option
+                >
+                <option value="Waverley St, Liverpool, Bootle L20 4AP"
+                  >Stamps Brewery</option
+                >
+                <option
+                  value="74 Venture Point West, Evans Road, Speke, Liverpool L24 9PB"
+                  >Big Bog Brewing Company Limited</option
+                >
+                <option
+                  value="Unit 1, Sefton Lane Industrial Estate, Sefton Ln, Maghull, Liverpool L31 8BX"
+                  >Neptune Brewery & Taproom</option
+                >
+                <option value="39 Stanhope St, Liverpool L8 5RE"
+                  >The Brewery Tap</option
+                >
+                <option value="Unit 3 Lightbox, Knox St, Birkenhead CH41 5JW"
+                  >Glen Affric Brewery
+                </option>
+                <option value="3nl, 8 Pool St, Birkenhead CH41 3NL"
+                  >Peerless Brewing Company Limited</option
+                >
+                <option value="Stephenson Way, Liverpool L37 8EG"
+                  >Red Star Brewery</option
+                >
+                <option
+                  value="6 Little Crosby Rd, Little Crosby, Liverpool L23 4TS"
+                  >Rock The Boat Brewery</option
+                >
+                <option
+                  value="Unit 11 Diamond Business Park, Sandwash Close, St Helens, Rainford WA11 8LY"
+                  >George Wright Brewing Company</option
+                >
+                <option value="Archway Rd, Huyton, Liverpool L36 9UJ"
+                  >The Barker's Brewery</option
+                >
+                <option
+                  value="Brimstage Brewery, Brimstage Ln, Brimstage, Wirral CH63 6HY"
+                  >Brimstage Brewery</option
+                >
+                <option value="Clifton Rd, Beechwood, Runcorn WA7 3EH"
+                  >Chapter Brewing Company
+                </option>
+                <option
+                  value="Wolverhampton House, 121-, 125 Church Street, Saint Helens WA10 1AJ"
+                  >Connoisseur Ales</option
+                >
+                <option
+                  value="3, Enterprise Business Park, Russell Rd, Blowick, Southport PR9 7RF"
+                  >Southport Brewery</option
+                >
+              </select>
+              <br />
+              <input type="submit" id="submit" />
+            </div>
+
+            <div id="directions-panel"></div>
+          </div>
+          <div class="overlay-image">
+            <div id="beer-pic"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.0.js"
       integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
