--- a/london.html
+++ b/london.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+      type="text/css"
+    />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -12,50 +16,321 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="assets/css/london.css" />
-    <script src="assets/js/london.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/53108b937c.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script src="assets/js/manchester.js"></script>
 
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar w/ text</a>
+   
+  <!------------------------Navbar----------------------------->
+
+    <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
-        class="navbar-toggler"
+        class="navbar-toggler ml-auto"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarText"
-        aria-controls="navbarText"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <a href="index.html">
+          <div class="logo">
+            <div id="BarHop-logo">
+              <img
+                src="assets/images/Bar Hop UK (1).png"
+                class="logo bar-hop-logo"
+                alt="Bar-Hop-UK"
+              />
+            </div></div
+        ></a>
+
+        <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
+            <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cities.html">Cities</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#nearyou">Breweries near you</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#cities">Cities</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#newsletter">Newsletter</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#join">Join</a>
           </li>
         </ul>
-        <span class="navbar-text">
-          Navbar text with an inline element
-        </span>
       </div>
     </nav>
-    <h1 id="tours">Tours</h1>
-   
-     
-        
-   <div id="mapLondon"></div>
 
+    <div class="container directions-container">
+      <div class="row">
+        <div class="col">
+          <h2 class="manchester-heading">Manchester</h2>
+          <p>
+            Using the brewery locater panel choose from the list of breweries
+            which you would like to visit. Choose brewery from which you would
+            like to start from a brewery yoy would like to finsh your journey on
+            and as many as you would like in between.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid manchester-container">
+      <div class="row">
+        <div class="col">
+          <div id="mapManchester"></div>
+
+          <div id="right-panel">
+            <div>
+              <b>Starting-Brewery:</b>
+              <select id="start">
+                <option
+                  value="Unit 17, Lockwood Industrial Park, Mill Mead Rd, London N17 9QP"
+                  >Beavertown Brewery</option
+                >
+                <option
+                  value="Arch 41, Railway Arches, Nursery Rd, Ferndale, London SW9 8BP"
+                  >London Beer Lab Taproom and Nano Brewery</option
+                >
+                <option
+                  value="Bermondsey Trading Estate, 22 Rotherhithe New Rd, Bermondsey, London SE16 3LL"
+                  >Fourpure Brewing Co. Basecamp</option
+                >
+
+                <option
+                  value="Unit 9A Queen's Yard, White Post Ln, London E9 5EN"
+                  >Howling Hops Brewery and Tank Bar</option
+                >
+                <option value="46 Druid St, London SE1 2EZ"
+                  >Southwark Brewing Company</option
+                >
+                <option value="118 Druid St, Bermondsey, London SE1 2HH"
+                  >Anspach & Hobday: The Bermondsey Taproom</option
+                >
+                <option value="Blenheim Grove, Peckham, London SE15 4QL"
+                  >Brick Brewery Taproom</option
+                >
+                <option value="London Fields Brewery, 365-366 Warburton St, London E8 3RR"
+                  >London Fields Brewery</option
+                >
+                <option value="55-59 Wilkin Street Mews, Kentish Town, London NW5 3NN"
+                  >Camden Town Brewery</option
+                >
+                <option value="42 Newington Causeway, London SE1 6DR"
+                  >German Kraft Beer
+                </option>
+                <option value="Unit 1 & 2, Yelverton Road, London SW11 3QG"
+                  >Sambrook's Brewery</option
+                >
+                <option value="34 Raymouth Rd, Bermondsey, London SE16 2DB"
+                  >Partizan Brewing</option
+                >
+                <option value="Lawrence Trading Estate, Blackwall Ln, Greenwich Peninsula, London SE10 0AR"
+                  >Meantime Brewing Company</option
+                >
+                <option value="Arch 11, Dockley Road Industrial Estate, Dockley Rd, Bermondsey, London SE16 3SF"
+                  >The Kernel Brewery</option
+                >
+                <option value="83-84 Enid St, Bermondsey, London SE16 3RA"
+                  >Bianca Road Brew Co.</option
+                >
+                <option value="4, 160 Hamilton Rd, Norwood, London SE27 9SF"
+                  >The London Beer Factory</option
+                >
+                <option value="Rosendale Rd, Norwood, London SE24 9EH"
+                  >Bullfinch Brewery
+                </option>
+                <option value="Unit 6, Lockwood Industrial Park, Mill Mead Rd, London N17 9QP"
+                  >Pressure Drop Brewery and Taproom</option
+                >
+                 <option value="tileyard studios, Tileyard Rd, London N7 9AH"
+                  >Two Tribes Brewing</option
+                >
+              </select>
+              <br />
+              <b>Waypoint-point breweries:</b> <br />
+              <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
+              <select multiple id="waypoints">
+                <option
+                  value="Unit 17, Lockwood Industrial Park, Mill Mead Rd, London N17 9QP"
+                  >Beavertown Brewery</option
+                >
+                <option
+                  value="Arch 41, Railway Arches, Nursery Rd, Ferndale, London SW9 8BP"
+                  >London Beer Lab Taproom and Nano Brewery</option
+                >
+                <option
+                  value="Bermondsey Trading Estate, 22 Rotherhithe New Rd, Bermondsey, London SE16 3LL"
+                  >Fourpure Brewing Co. Basecamp</option
+                >
+
+                <option
+                  value="Unit 9A Queen's Yard, White Post Ln, London E9 5EN"
+                  >Howling Hops Brewery and Tank Bar</option
+                >
+                <option value="46 Druid St, London SE1 2EZ"
+                  >Southwark Brewing Company</option
+                >
+                <option value="118 Druid St, Bermondsey, London SE1 2HH"
+                  >Anspach & Hobday: The Bermondsey Taproom</option
+                >
+                <option value="Blenheim Grove, Peckham, London SE15 4QL"
+                  >Brick Brewery Taproom</option
+                >
+                <option value="London Fields Brewery, 365-366 Warburton St, London E8 3RR"
+                  >London Fields Brewery</option
+                >
+                <option value="55-59 Wilkin Street Mews, Kentish Town, London NW5 3NN"
+                  >Camden Town Brewery</option
+                >
+                <option value="42 Newington Causeway, London SE1 6DR"
+                  >German Kraft Beer
+                </option>
+                <option value="Unit 1 & 2, Yelverton Road, London SW11 3QG"
+                  >Sambrook's Brewery</option
+                >
+                <option value="34 Raymouth Rd, Bermondsey, London SE16 2DB"
+                  >Partizan Brewing</option
+                >
+                <option value="Lawrence Trading Estate, Blackwall Ln, Greenwich Peninsula, London SE10 0AR"
+                  >Meantime Brewing Company</option
+                >
+                <option value="Arch 11, Dockley Road Industrial Estate, Dockley Rd, Bermondsey, London SE16 3SF"
+                  >The Kernel Brewery</option
+                >
+                <option value="83-84 Enid St, Bermondsey, London SE16 3RA"
+                  >Bianca Road Brew Co.</option
+                >
+                <option value="4, 160 Hamilton Rd, Norwood, London SE27 9SF"
+                  >The London Beer Factory</option
+                >
+                <option value="Rosendale Rd, Norwood, London SE24 9EH"
+                  >Bullfinch Brewery
+                </option>
+                <option value="Unit 6, Lockwood Industrial Park, Mill Mead Rd, London N17 9QP"
+                  >Pressure Drop Brewery and Taproom</option
+                >
+                 <option value="tileyard studios, Tileyard Rd, London N7 9AH"
+                  >Two Tribes Brewing</option
+                >
+              </select>
+              <br />
+              <b>Finishing-brewery:</b>
+              <select id="end">
+                <option
+                  value="Unit 17, Lockwood Industrial Park, Mill Mead Rd, London N17 9QP"
+                  >Beavertown Brewery</option
+                >
+                <option
+                  value="Arch 41, Railway Arches, Nursery Rd, Ferndale, London SW9 8BP"
+                  >London Beer Lab Taproom and Nano Brewery</option
+                >
+                <option
+                  value="Bermondsey Trading Estate, 22 Rotherhithe New Rd, Bermondsey, London SE16 3LL"
+                  >Fourpure Brewing Co. Basecamp</option
+                >
+
+                <option
+                  value="Unit 9A Queen's Yard, White Post Ln, London E9 5EN"
+                  >Howling Hops Brewery and Tank Bar</option
+                >
+                <option value="46 Druid St, London SE1 2EZ"
+                  >Southwark Brewing Company</option
+                >
+                <option value="118 Druid St, Bermondsey, London SE1 2HH"
+                  >Anspach & Hobday: The Bermondsey Taproom</option
+                >
+                <option value="Blenheim Grove, Peckham, London SE15 4QL"
+                  >Brick Brewery Taproom</option
+                >
+                <option value="London Fields Brewery, 365-366 Warburton St, London E8 3RR"
+                  >London Fields Brewery</option
+                >
+                <option value="55-59 Wilkin Street Mews, Kentish Town, London NW5 3NN"
+                  >Camden Town Brewery</option
+                >
+                <option value="42 Newington Causeway, London SE1 6DR"
+                  >German Kraft Beer
+                </option>
+                <option value="Unit 1 & 2, Yelverton Road, London SW11 3QG"
+                  >Sambrook's Brewery</option
+                >
+                <option value="34 Raymouth Rd, Bermondsey, London SE16 2DB"
+                  >Partizan Brewing</option
+                >
+                <option value="Lawrence Trading Estate, Blackwall Ln, Greenwich Peninsula, London SE10 0AR"
+                  >Meantime Brewing Company</option
+                >
+                <option value="Arch 11, Dockley Road Industrial Estate, Dockley Rd, Bermondsey, London SE16 3SF"
+                  >The Kernel Brewery</option
+                >
+                <option value="83-84 Enid St, Bermondsey, London SE16 3RA"
+                  >Bianca Road Brew Co.</option
+                >
+                <option value="4, 160 Hamilton Rd, Norwood, London SE27 9SF"
+                  >The London Beer Factory</option
+                >
+                <option value="Rosendale Rd, Norwood, London SE24 9EH"
+                  >Bullfinch Brewery
+                </option>
+                <option value="Unit 6, Lockwood Industrial Park, Mill Mead Rd, London N17 9QP"
+                  >Pressure Drop Brewery and Taproom</option
+                >
+                 <option value="tileyard studios, Tileyard Rd, London N7 9AH"
+                  >Two Tribes Brewing</option
+                >
+              </select>
+              <br />
+              <input type="submit" id="submit" />
+            </div>
+
+            <div id="directions-panel"></div>
+          </div>
+          <div class="overlay-image">
+            <div id="beer-pic"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.0.js"
+      integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
+      crossorigin="anonymous"
+    ></script>
     <script src="https://unpkg.com/@google/markerclustererplus@4.0.1/dist/markerclustererplus.min.js"></script>
     <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCEHs3x97gngwVn1vWAHuRHfYbZVf0scUs&libraries=places&callback=initAutocomplete"
